Bug 612798 - Remoting Audio - Thread per stream to avoid problems with blocking drain/write calls. r=dougt. a=blocking-fennec

--HG--
extra : rebase_source : a2efdcf562d3da08e9676fe174d0cdc3e317fa82