dom/ipc/AudioChild.h
@@ -41,6 +41,7 @@
 #define mozilla_dom_AudioChild_h
 
 #include "mozilla/dom/PAudioChild.h"
+#include "mozilla/Monitor.h"
 
 namespace mozilla {
 namespace dom {
@@ -54,6 +55,8 @@ class AudioChild : public PAudioChild
     AudioChild();
     virtual ~AudioChild();
     virtual bool RecvSampleOffsetUpdate(const PRInt64&, const PRInt64&);
+    virtual bool RecvDrainDone();
+    virtual void WaitForDrain();
     virtual void ActorDestroy(ActorDestroyReason);
     
     PRInt64 GetLastKnownSampleOffset();
@@ -64,7 +67,9 @@ class AudioChild : public PAudioChild
     nsAutoRefCnt mRefCnt;
     NS_DECL_OWNINGTHREAD
     PRInt64 mLastSampleOffset, mLastSampleOffsetTime;
+    mozilla::Monitor mAudioMonitor;
     PRPackedBool mIPCOpen;
+    PRPackedBool mDrained;
 };
 
 } // namespace dom
